--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
+  background: url('https://cdn.pixabay.com/photo/2018/08/21/23/29/forest-3622519_960_720.jpg');
+  background-size: cover;
+}
 .block {
   display: flex;
   flex-direction: column;
