--- a/src/Components/ContactList/ContactList.module.css
+++ b/src/Components/ContactList/ContactList.module.css
@@ -1,18 +1,3 @@
-.form {
-  display: flex;
-  align-items: end;
-  flex-direction: column;
-}
-
-.label {
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-}
-
-.input {
-  max-width: 200px;
-}
 .btn {
   padding: 10px;
   border-radius: 5px;
@@ -22,6 +7,7 @@
   text-transform: uppercase;
   font-weight: 700;
   border: #000000 solid 1px;
+  margin-left: 10px;
   cursor: pointer;
   box-shadow: 2px 2px 4px #000;
 }
@@ -30,4 +16,10 @@
   box-shadow: 4px 4px 9px #000;
 
   background: #86dace;
+}
+.item {
+  margin-bottom: 10px;
+}
+.span {
+  margin-left: 10px;
 }
